# dl_serialization

./: README.md  eb.env
Inferator/: README.md
Inferator/TensorFlow_comparison/: Makefile  TFcaller.cpp  TFcaller.h
Inferator/env/: env_modules.csh  env_modules_intel.csh  env_modules_intel20.csh
Inferator/src/: inference.cpp  inference.h
Inferator/test/: Makefile  main.cpp
ONNX/cpp/: eb.env
ONNX/cpp/src/: CMakeLists.txt  inference.cpp
ONNX/python/: export2onnx.py
PyTorch/cpp/: CMakeLists.txt  README.md  eb.env
PyTorch/cpp/cmake/: FindOpenCV.cmake  FindTorch.cmake
PyTorch/cpp/src/: CMakeLists.txt  graphutils.cpp  graphutils.h  modelutils.cpp  modelutils.h  opencvutils.cpp  opencvutils.h  test_LR.cpp  test_LR_MPI.cpp  test_MLR.cpp  test_gnn.cpp  test_loadmodel.cpp  test_non_LR_MPI.cpp  test_resnet.cpp  torchutils.cpp  torchutils.h
PyTorch/python/efficientnet/: create_model.py
PyTorch/python/gnn/: cnn1d.py  dataset.py  gnn.py  gnn0.py
PyTorch/python/gnnnet/: create_model.py  gnn_model.py  training_algo.py
PyTorch/python/resnet/: create_model.py
PyTorch/python/simplenets/: LR.py  MLR.py
TensorFlow/cpp/: CMakeLists.txt  README.md  eb.env
TensorFlow/cpp/cmake/: FindBoost.cmake  FindTensorFlow.cmake
TensorFlow/cpp/src/: CMakeLists.txt  test_capi.cpp  test_cppflow.cpp  test_non_LR.cpp
TensorFlow/python/carnotnet/: create_model.py  createmodel.py
TensorFlow/python/efficientnet/: create_model.py
TensorFlow/python/mnist/: create_training_model.py
TensorFlow/python/simplenets/: LR.py  MLR.py  non_LR.py
data/: labels.txt
data/carnotnet/: data.npy
data/gnn/: graph0.json  graph1.json  graph100.json  graph2.json  graph3.json
data/ptflash/: data_2comp.npy  data_9comp.npy
data/wall_functions/: data_sample.csv
doc/: PTFlash-Geoxim-FlashMultiLaw.pptx
env/: TF2.0-env.yml  build-env.sh  carnot-pytorch2-py10-env.yml  env_cpu.sh  env_gpu.sh  nnop-pytorch2-py10-env.yml  pytorch-env.yml  pytorch2-py10-env.yml
model/carnotnet/: keras_metadata.pb  saved_model.pb
model/carnotnet/variables/: variables.data-00000-of-00001  variables.index
model/dnns/pytorch/: C16DNN1.pt  C16DNN16.pt  C16DNN2.pt  C16DNN32.pt  C16DNN4.pt  C16DNN8.pt  C2DNN1.pt  C2DNN16.pt  C2DNN2.pt  C2DNN32.pt  C2DNN4.pt  C2DNN8.pt  C32DNN1.pt  C32DNN16.pt  C32DNN2.pt  C32DNN32.pt  C32DNN4.pt  C32DNN8.pt  C4DNN1.pt  C4DNN16.pt  C4DNN2.pt  C4DNN32.pt  C4DNN4.pt  C4DNN8.pt  C64DNN1.pt  C64DNN16.pt  C64DNN2.pt  C64DNN32.pt  C64DNN4.pt  C64DNN8.pt  C8DNN1.pt  C8DNN16.pt  C8DNN2.pt  C8DNN32.pt  C8DNN4.pt  C8DNN8.pt
model/efficientnet/model/variables/: variables.index
model/mnist/model/: saved_model.pb
model/mnist/model/variables/: variables.data-00000-of-00001  variables.index
model/ptflash/: classifier.onnx  classifier.pt  initializer.onnx  initializer.pt  ptflash_9comp.pt
model/simplenets/onnx/: C2DNN1.onnx  C2DNN2.onnx
model/simplenets/pytorch/: LR_model.pt  MLR_model.pt  non_LR_model.pt
model/wall_functions/: AIwall_function.h5
model/wall_functions/AI_wall_function_TF/: saved_model.pb
nnice/TensorFlow_comparison/: env_modules.csh  env_modules_intel.csh  env_modules_tf_mehlc.csh  main.cpp
nnice/test/: main.cpp
onnx/bench/: cluster_scale.sh  local_scale.sh
onnx/cpp/: CMakeLists.txt  eb-foss2018b.env  eb-r11-2021b.env
onnx/cpp/cmake/: FindONNX.cmake
onnx/cpp/src/: CMakeLists.txt  benchmark_mpi_onnx.cpp  benchmark_scale_onnx.cpp  inference.cpp
onnx/python/: export2onnx.py
onnx/python/simplenets/: non_LR.py
pytorch/bench/: Generate_Bash_Exec.py  local_mpi.sh  local_scale.sh
pytorch/cpp/: CMakeLists.txt  eb-r11-2021b.env  idris.env
pytorch/cpp/cmake/: FindBoost.cmake  FindCAWFInference.cmake  FindCarnot.cmake  FindONNX.cmake  FindTensorRT.cmake  FindTorch.cmake
pytorch/cpp/src/: CMakeLists.txt  graphutils.cpp  graphutils.h  modelutils.h  test_MLR_MPI.cpp  test_carnot.cpp  test_dss.cpp  test_gnn.cpp  test_non_LR.cpp  test_resnet.cpp  test_trt.cpp
pytorch/cpp/src/bench/: benchmark_mpi_pt.cpp  benchmark_scale_pt.cpp
pytorch/cpp/src/carnot/: PTFlash.cpp  PTFlash.h
pytorch/cpp/src/ml4cfd/: CMakeLists.txt  DSSSolver.cpp  DSSSolver.h  DSSSolverConfig.cmake.in  TRTEngine.cpp  cnpy.cpp  graph.h  graphutils.cpp  modelutils.cpp
pytorch/cpp/src/ml4cfd/internal/: TRTEngine.h  graphutils.h  modelutils.h
pytorch/cpp/src/tensorrt/: TRTEngine.cpp  TRTEngine.h  TRTEngineTester.cpp  TRTEngineTester.h
pytorch/cpp/src/utils/: PerfCounterMng.h  rdtsc.h
pytorch/cpp/src/utils/9.2/: common.h
pytorch/cpp/test/: bench.sh  bench_carnot.sh  bench_cawf.sh  bench_idris.sh  bench_onnx.sh  bench_pttorch.sh  bench_torch.sh
pytorch/python/bench/: benchmark_mpi_notebook.ipynb  build_graph.py  build_scalable.py
pytorch/python/carnot/: bench.sh  main_to_onnx.py  test.py  test_carnot.py
pytorch/python/carnot/ptflash/: bank.py  (+10 more)
pytorch/python/dnns/: C16DNN1.py  C16DNN16.py  C16DNN2.py  C16DNN32.py  C16DNN4.py  C16DNN8.py  C2DNN1.py  C2DNN16.py  C2DNN2.py  C2DNN32.py  C2DNN4.py  C2DNN8.py  C32DNN1.py  C32DNN16.py  C32DNN2.py  C32DNN32.py  C32DNN4.py  C32DNN8.py  C4DNN1.py  C4DNN16.py  C4DNN2.py  C4DNN32.py  C4DNN4.py  C4DNN8.py  C64DNN1.py  C64DNN16.py  C64DNN2.py  C64DNN32.py  C64DNN4.py  C64DNN8.py  C8DNN1.py  C8DNN16.py  C8DNN2.py  C8DNN32.py  C8DNN4.py  C8DNN8.py
pytorch/python/gnn/: dataset.py  gnn0.py
pytorch/python/gnnnet/: create_model.py  vof_data.py
pytorch/python/simplenets/: LR.py  MLR.py  non_LR.py
tensorflow/cpp/: CMakeLists.txt  README.md  eb-r11-2021b.env  eb.env
tensorflow/cpp/cmake/: FindTensorFlow.cmake
tensorflow/cpp/src/: CMakeLists.txt  benchmark_mpi_tf.cpp  benchmark_scale_tf.cpp  test_LR.cpp  test_MLR.cpp  test_carnot.cpp  test_cppflow.cpp
tensorflow/python/carnotnet/: create_model.py
tensorflow/python/mnist/: create_training_model.py
tensorflow/python/resnet/: create_model.py
tensorrt/cpp/: CMakeLists.txt  eb-r11-2021b.env
tensorrt/cpp/cmake/: FindOpenCV.cmake  FindTensorRT.cmake
tensorrt/cpp/src/: CMakeLists.txt  TRTEngine.cpp  TRTEngine.h  benchmark_scale_tensorrt.cpp  inference.cpp
tensorrt/python/: export2onnx.py
(+14 files in other folders)
